<resources>
    <string name="app_name">7MinutesWorkout</string>
    <string name="start">START</string>
    <string name="_7_minutes_workout">7 Minutes workout</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE:</string>
    <string name="end">END</string>

    <string name="finish">Finish</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_have_completed_your_7_minutes_workout">You have completed <br /> your 7 minutes workout!</string>
    <string name="this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit">This will stop your workout. You\'ve come this far, <br /> are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">Calculate</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="feet">Feet</string>
    <string name="weight_in_pounds">WEIGHT (in pounds)</string>
    <string name="us_units">US Units</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
    <string name="no_workouts">No completed workouts yet.<br /> Get started now!</string>
</resources>